--- a/MvcPracticaCubos/Views/_ViewImports.cshtml
+++ b/MvcPracticaCubos/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using MvcPracticaCubos
 @using MvcPracticaCubos.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using MvcNetCoreSessionEmpleados.Extensions
+@using Microsoft.Extensions.Caching.Memory
+@inject IMemoryCache cache
