--- a/MvcPracticaCubos/Views/Cubos/Details.cshtml
+++ b/MvcPracticaCubos/Views/Cubos/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MvcPracticaCubos.Models.Cubo
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
     <h4>Cubo</h4>
@@ -34,21 +34,21 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Marca)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Precio)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Precio)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Imagen)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Imagen)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Precio)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Precio)
+            <img src="~/cubos/@Model.Imagen" width="150" />
         </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Cubos" asp-action="Edit" asp-route-id="@Model.IdCubo">Editar</a> |
+    <a asp-controller="Cubos" asp-action="Index">Volver</a>
 </div>
